--- a/Index.html
+++ b/Index.html
@@ -2,18 +2,21 @@
 <html>
 
   <head>
+    <link rel="stylesheet" href="style.css"> 
     <title>New Page</title>
   </head>
   <body>
     <h1> HOW ARE YOU!</h1>
     
-    <form action="/action_page.php">
+    <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="Travis><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="Doe"><br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="submit-btn">
       </form>
+
+      <a href="contact.html">Contact Me!</a>
 
 
   </body> 
