background and centered

--- a/Index.html
+++ b/Index.html
@@ -4,21 +4,30 @@
   <head>
     <link rel="stylesheet" href="style.css"> 
     <title>New Page</title>
+  
+    <style>
+      body {
+        background-image: url('https://wallpaperaccess.com/full/6353236.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+      </style>
+      
   </head>
   <body>
-    <h1> HOW ARE YOU!</h1>
+    <center><h1> HOW ARE YOU!</h1>
     
     <form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="Travis><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br><br>
-        <input type="submit" value="Submit" class="submit-btn">
-      </form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname">
+   </form>
 
       <a href="contact.html">Contact Me!</a>
 
-
+    </center>
   </body> 
 
 </html>
