--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css"> 
     <title>New Page</title>
   </head>
-  <body>
-<table>
+  <body rel="stylesheet" href="style.css">
+  <table border="50" >
     <tr>
       <th>Company</th>
       <th>Contact</th>
@@ -24,5 +24,6 @@
     </tr>
   </table>
   <a href="Index.html">Go Home!</a>
+
 </body>
 </html>
