--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,33 @@
 
   <head>
     <link rel="stylesheet" href="style.css"> 
+    
     <title>New Page</title>
-  </head>
-  <body rel="stylesheet" href="style.css">
-  <table border="50" >
-    <tr>
-      <th>Company</th>
-      <th>Contact</th>
-      <th>Country</th>
-    </tr>
-    <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Maria Anders</td>
-      <td>Germany</td>
-    </tr>
-    <tr>
-      <td>Centro comercial Moctezuma</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
-    </tr>
-  </table>
-  <a href="Index.html">Go Home!</a>
 
+    <link rel="stylesheet" href="styles.css">   
+    <style>
+      body {
+        background-image: url('https://cdn.wallpapersafari.com/67/75/mp5bRl.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+      </style>
+
+
+ 
+  </head>
+
+  
+  <body>
+    <centre>
+      <H1>lofi music</H1>
+
+
+
+
+     <a href="Index.html">Go Home!</a>
+
+   </centre>
 </body>
 </html>
