--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" href="style.css"> 
     
-    <title>New Page</title>
+      <title>New Page</title>
    
     <link rel="stylesheet" href="styles.css">   
     <style>
@@ -21,16 +21,16 @@
   
   <body>
     <center>
-      <h1> Sign In!</h1>
+      <h1 style="color:purple;">SIGN IN</h1>
     
-    <form>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname"><br><br>
-  <input type="submit" value="Submit">
-   </form>
-      <a href="contact.html">Click me!</a>
+    <form style="color:deeppink; >
+      <label for="fname"  >First name:</label><br>
+      <input type="text" id="fname" name="fname"><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname"><br><br>
+      <input type="submit" value="Submit">
+    </form>
+       <a href="contact.html" style="color:rgb(0, 0, 0);" >Click me!</a>
 
     </center>
   </body> 
