--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,46 @@
           <td>2:11-4:33</td>
           <td>5/10</td>
         </tr>
+        <tr>
+          <td>Voice of the wind</td>
+          <td>4:36-7:21</td>
+          <td>9/10</td>
+        </tr>
+        <tr>
+          <td>The Old Legend</td>
+          <td>7:24-9:47</td>
+          <td>6/10</td>
+        </tr>
+        <tr>
+          <td>Nei</td>
+          <td>9:52-12:27</td>
+          <td>3/10</td>
+        </tr>
+        <tr>
+          <td>Strong Minded</td>
+          <td>12:30-15:50</td>
+          <td>8/10</td>
+        </tr>
+        <tr>
+          <td>Miasu</td>
+          <td>15:52-18:21</td>
+          <td>8/10</td>
+        </tr>
+        <tr>
+          <td>Healing Touch</td>
+          <td>18:24-21:06</td>
+          <td>5/10</td>
+        </tr>
+        <tr>
+          <td>Ekiso</td>
+          <td>21:09-23:29</td>
+          <td>7/10</td>
+        </tr>
+        <tr>
+          <td>Quitness</td>
+          <td>23:32-25:35</td>
+          <td>10/10</td>
+        </tr>
       </table>
      
 
